update add todo feature

--- a/src/index.html
+++ b/src/index.html
@@ -36,8 +36,8 @@
                     <div class="tasks-container">
                         <div class="task-item">
                             <div class="task-item-left">
-                                <input type="checkbox" id="todo1" name="todo1">
-                                <label for="todo1" class="task-label">Begin Todo List project</label>
+                                <input type="checkbox" class="task-check">
+                                <span class="task-name">Begin Todo List project</span>
                             </div>
                             <div class="task-item-right">
                                 <div class="due-date">09-25-2023</div>
