--- a/src/index.html
+++ b/src/index.html
@@ -67,28 +67,23 @@
                                 </div>
                             </div>
                         </div>
-                        <button class="create-task-btn"><?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
-                            <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <circle opacity="0.5" cx="12" cy="12" r="10" stroke="#1C274C" stroke-width="1.5"/>
-                            <path d="M15 12L12 12M12 12L9 12M12 12L12 9M12 12L12 15" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round"/>
-                            </svg>
-                        </button>
-                        <form class="task-form" action="">
-                            <label for="todo-title" class="visually-hidden">Title</label>
-                            <input type="text" id="todo-title" name="title" placeholder="Title: Studying">
-                            <label for="todo-descr" class="visually-hidden">Description</label>
-                            <textarea type="text" id="todo-descr" name="todo-descr" placeholder="Description"></textarea>
-                            <label for="due-date" class="visually-hidden">Due date</label>
-                            <input type="date" id="due-date" name="due-date" value="2024-01-01" min="2024-01-01"/>
-                            <select id="todo-priority" name="todo-priority">
-                                <option value="low">Low</option>
-                                <option value="medium">Medium</option>
-                                <option value="high">High</option>
-                            </select>
-                            <button id="add-task-btn"> Add Task</button>
-                        </form>
-                    
                     </div>
+
+                    <button class="create-task-btn"></button>
+                    <form class="task-form" action="">
+                        <label for="todo-title" class="visually-hidden">Title</label>
+                        <input type="text" id="todo-title" name="title" placeholder="Title: Studying">
+                        <label for="todo-descr" class="visually-hidden">Description</label>
+                        <textarea type="text" id="todo-descr" name="todo-descr" placeholder="Description"></textarea>
+                        <label for="due-date" class="visually-hidden">Due date</label>
+                        <input type="date" id="due-date" name="due-date" value="2024-01-01" min="2024-01-01"/>
+                        <select id="todo-priority" name="todo-priority">
+                            <option value="low">Low</option>
+                            <option value="medium">Medium</option>
+                            <option value="high">High</option>
+                        </select>
+                        <button id="add-task-btn"> Add Task</button>
+                    </form>
                 </div>
             </main>
     </div>
