Create project switching logic

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,12 @@
                             <li><a href="#" class="cat-link"><div class="list-label"><img alt="Inbox Icon" class="list-icon inbox-icon" width="20" height="20"> <span class="list-label">Work</span></div></a></li>
                             <li><a href="#" class="cat-link"><div class="list-label"><img alt="Inbox Icon" class="list-icon inbox-icon" width="20" height="20"> <span class="list-label">Education</span></div></a></li>
                         </ul>
+                        <button class="create-project-btn">Add Project</button>
+                        <form class="project-form" action="">
+                            <label for="project-title" class="visually-hidden">Title</label>
+                            <input type="text" id="project-title" name="title" placeholder="Title: Academics">
+                            <button id="add-project-btn"> Add Project</button>
+                        </form>
                     </div>
                 </div>
             </aside>
