hide forms after submission

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 class="logo">NextUp</h1>
+        <h1 class="logo">nextUp</h1>
     </header>
     <div class="flex-container">
         
