--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,33 @@
     <script src="main.js" defer></script>
 </head>
 <body>
+    <section id="create-modal" class="modal ">
+
+        <form class="task-form" action="">
+            <label for="todo-title">Title</label>
+            <input type="text" id="todo-title" name="title" placeholder="Title: Studying">
+            <label for="todo-descr" class="visually-hidden">Description</label>
+            <textarea type="text" id="todo-descr" name="todo-descr" placeholder="Description"></textarea>
+            <label for="due-date" class="visually-hidden">Due date</label>
+            <input type="date" id="due-date" name="due-date" value="2024-01-01" min="2024-01-01"/>
+            <select id="todo-priority" name="todo-priority">
+                <option value="low">Low</option>
+                <option value="medium">Medium</option>
+                <option value="high">High</option>
+            </select>
+            <button id="add-task-btn"> Add Task</button>
+        </form>
+
+    </section>
+    <section id="edit-modal" class="modal hidden">
+
+        <form action="">
+
+        </form>
+
+    </section>
+
+    <div class="overlay hidden"></div>
     <header>
         <h1 class="logo">nextUp</h1>
     </header>
@@ -78,21 +105,9 @@
                     <button class="create-task-btn"><svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle opacity="0.5" cx="12" cy="12" r="10" stroke="#1C274C" stroke-width="1.5"/>
                         <path d="M15 12L12 12M12 12L9 12M12 12L12 9M12 12L12 15" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round"/>
-                        </svg></button>
-                    <form class="task-form" action="">
-                        <label for="todo-title" class="visually-hidden">Title</label>
-                        <input type="text" id="todo-title" name="title" placeholder="Title: Studying">
-                        <label for="todo-descr" class="visually-hidden">Description</label>
-                        <textarea type="text" id="todo-descr" name="todo-descr" placeholder="Description"></textarea>
-                        <label for="due-date" class="visually-hidden">Due date</label>
-                        <input type="date" id="due-date" name="due-date" value="2024-01-01" min="2024-01-01"/>
-                        <select id="todo-priority" name="todo-priority">
-                            <option value="low">Low</option>
-                            <option value="medium">Medium</option>
-                            <option value="high">High</option>
-                        </select>
-                        <button id="add-task-btn"> Add Task</button>
-                    </form>
+                        </svg>
+                    </button>
+                   
                 </div>
             </main>
     </div>
