update project switching

--- a/src/index.html
+++ b/src/index.html
@@ -61,11 +61,7 @@
                     </ul>
                     <div class="project-sec">
                         <h2>Projects</h2>
-                        <ul class="project-lists">
-                            <li><a href="#" class="cat-link"><div class="list-label"><img alt="Inbox Icon" class="list-icon inbox-icon" width="20" height="20"> <span class="list-label">Personal</span></div></a></li>
-                            <li><a href="#" class="cat-link"><div class="list-label"><img alt="Inbox Icon" class="list-icon inbox-icon" width="20" height="20"> <span class="list-label">Work</span></div></a></li>
-                            <li><a href="#" class="cat-link"><div class="list-label"><img alt="Inbox Icon" class="list-icon inbox-icon" width="20" height="20"> <span class="list-label">Education</span></div></a></li>
-                        </ul>
+                        <ul class="project-lists"></ul>
                         <button class="create-project-btn">Add Project</button>
                         <form class="project-form hidden" action="">
                             <label for="project-title" class="visually-hidden">Title</label>
