--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,12 @@
             <aside>
                 <div class="aside-categories">
                     <ul class="general-task-lists">
-                        <li><a href="#" class="cat-link"><div class="list-label"><img alt="Inbox Icon" class="list-icon inbox-icon" width="20" height="20"> <span class="list-label">Inbox</span></div></a></li>
+                        <li> <button class="list-item-btn inbox-btn">
+                            <div class="list-item-container">
+                                <img alt="Inbox Icon" class="list-icon inbox-icon" width="20" height="20">
+                                <span class="list-item-name">Inbox</span>
+                            </div>
+                        </button></li>
                         <li><a href="#" class="cat-link"><div class="list-label"><img alt="Calendar Icon" class="list-icon tcal-icon" width="20" height="20"> <span class="list-label">Today</span></div></a></li>
                         <li><a href="#" class="cat-link"><div class="list-label"><img  alt="Calendar Icon" class="list-icon ucal-icon" width="20" height="20"> <span class="list-label">Upcoming</span></div></a></li>
                     </ul>
