--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         <h1 class="logo">nextUp</h1>
     </header>
     <div class="modal hidden" id="create-modal">
-        <form class="create-task-form" action="">
+        <form class="task-form" action="">
             <label for="todo-title" class="visually-hidden">Title</label>
             <input type="text" id="todo-title" name="title" placeholder="Title: Studying">
             <label for="todo-descr" class="visually-hidden">Description</label>
@@ -30,7 +30,7 @@
         </form>
     </div>
     <div class="modal hidden" id="edit-modal">
-        <form class="create-task-form" action="">
+        <form class="task-form" action="">
             <label for="edit-title" class="visually-hidden">Title</label>
             <input type="text" id="edit-title" name="title" placeholder="Title: Studying">
             <label for="edit-descr" class="visually-hidden">Description</label>
@@ -43,7 +43,7 @@
                 <option value="high">High</option>
             </select>
             <div class="form-btns">
-                <button id="edit-task-btn" class="submit-btn"> Add Task</button>
+                <button id="edit-task-btn" class="submit-btn"> Update Task</button>
                 <button type="button" class="cancel-btn">Cancel</button>
             </div>
         </form>
@@ -55,8 +55,7 @@
             <aside>
                 <div class="aside-categories">
                     <ul class="general-task-lists">
-                        <li><a href="#" class="cat-link"><div class="list-label"><img alt="Calendar Icon" class="list-icon tcal-icon" width="20" height="20"> <span class="list-label">Today</span></div></a></li>
-                        <li><a href="#" class="cat-link"><div class="list-label"><img  alt="Calendar Icon" class="list-icon ucal-icon" width="20" height="20"> <span class="list-label">Upcoming</span></div></a></li>
+                        <button class="list-item-btn inbox-btn"><div class="list-item-container"> <img alt="Calendar Icon" class="list-icon tcal-icon" width="20" height="20"> <span class="list-item-name">All Tasks</span></div></button>
                     </ul>
                     <div class="project-sec">
                         <h2>Projects</h2>
@@ -73,7 +72,7 @@
         
             <main>
                 <div class="inbox">
-                    <h2 class="project-title">Inbox</h2>
+                    <h2 class="project-title"></h2>
                     <div class="tasks-container"></div>
 
                     <button class="create-task-btn"><svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
