Initial dist subtree commit

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NextUp</title>
     <script src="main.js" defer></script>
-</head>
+<script defer src="runtime.e3f2f005827d6f6333b0.js"></script><script defer src="main.92db5a5319009a6c6186.js"></script><link href="styles.56892091e5ef4b7a6bad.css" rel="stylesheet"></head>
 <body>
     <header>
         <h1 class="logo">nextUp</h1>
