--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
             <aside>
                 <div class="aside-categories">
                     <ul class="general-task-lists">
-                        <button class="list-item-btn inbox-btn"><div class="list-item-container"> <img alt="Calendar Icon" class="list-icon tcal-icon" width="20" height="20"> <span class="list-item-name">All Tasks</span></div></button>
+                        <button class="list-item-btn inbox-btn"><div class="list-item-container"> <img alt="Calendar Icon" class="list-icon inbox-icon" width="20" height="20"> <span class="list-item-name">All Tasks</span></div></button>
                     </ul>
                     <div class="project-sec">
                         <h2>Projects</h2>
